modified heading -- student portfolio added

--- a/page1.html
+++ b/page1.html
@@ -42,7 +42,7 @@ padding:1%;
   <body style="font-family:monospace;background-color:powderblue">
 
 
-    <h1 style="color:#00806a;text-align:center">PORTFOLIO</h1>
+    <h1 style="color:#00806a;text-align:center">STUDENT PORTFOLIO</h1>
     <hr>
 <!-- data started     ---------------->
 <div style="display:flex;flex-wrap:wrap;">
@@ -53,7 +53,7 @@ padding:1%;
         <img src="image1.png" alt="profile picture" width="200" height="200" />
         <h4 style="text-align:center;"><big> Name:Jyothi</big></h4>
         <h4 style="text-align:center;"><big>student<big></h4>
-        
+
       </div>
 
   </div>
