--- a/page1.html
+++ b/page1.html
@@ -2,6 +2,7 @@
 <html >
   <head>
   <title ><strong>Portfolio<strong></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,7 +36,30 @@ padding:1%;
    text-align:center;
    font-size:25px;
    font-weight:bold;
+
 }
+.img-border{
+  border:2px dotted #0077ff;
+  width:25%;
+  display:flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  padding:1%;
+}
+@media screen and (max-width: 500px) {
+h1{
+   text-align: center;
+}
+.img-border{
+  width: 100% !important;
+}
+.skill{
+  width:100%;
+}
+}
+
+
+
 </style>
 
   </head>
@@ -47,7 +71,7 @@ padding:1%;
 <!-- data started     ---------------->
 <div style="display:flex;flex-wrap:wrap;">
 
-  <div style="border:2px dotted #0077ff; width:25%;display:flex;flex-wrap: wrap;justify-content:center;padding:1%;">
+  <div class="img-border" style="">
 
       <div>
         <img src="image1.png" alt="profile picture" width="200" height="200" />
@@ -57,9 +81,10 @@ padding:1%;
       </div>
 
   </div>
+  <h2>Education</h2>
+<!--
+  <div style="overflow-x:auto;">
 
-  <div style=" width:100%;padding:3%">
-<h2>Education</h2>
 
 
 
@@ -91,7 +116,7 @@ padding:1%;
       </tr>
   </table>
 
-</div>
+</div> -->
 
 </div>
 <hr>
